--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -7,10 +7,208 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-book"></i>Ayuda</h1>
+                    <a name="goal"></a>
+                    <h1><i class="fa fa-fw fa-info-circle"></i> Objetivo</h1>
                 </div>
             </div>
-
+            <div class="col-xs-12">
+                <div class="page-header text-center">
+                    <a name="factions"></a>
+                    <h1><i class="fa fa-fw fa-info-circle"></i> Facciones</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-offset-5 col-xs-2">
+                    <div class="panel panel-info">
+                        <div class="panel-heading text-center hidden-xs hidden-sm">Fantasmal</div>
+                        <div class="panel-body">
+                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/ghost.jpg') }}">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2 col-xs-offset-3">
+                <div class="panel panel-warning">
+                    <div class="panel-heading text-center hidden-xs hidden-sm">Oscuridad</div>
+                    <div class="panel-body">
+                        <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/darkness.jpg') }}">
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-offset-2 col-xs-2">
+                <div class="panel panel-primary">
+                    <div class="panel-heading text-center hidden-xs hidden-sm">Sagrado</div>
+                    <div class="panel-body">
+                        <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/holy.jpg') }}">
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-offset-4 col-xs-2">
+                <div class="panel panel-danger">
+                    <div class="panel-heading text-center hidden-xs hidden-sm">Destrucción</div>
+                    <div class="panel-body">
+                        <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/doom.jpg') }}">
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <div class="panel panel-success">
+                    <div class="panel-heading text-center hidden-xs hidden-sm">Natural</div>
+                    <div class="panel-body">
+                        <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/nature.jpg') }}">
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="page-header text-center">
+                    <a name="buildings"></a>
+                    <h1><i class="fa fa-fw fa-info-circle"></i> Edificios</h1>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Tierras</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/land.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Pueblos</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/village.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Granjas</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/farm.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Nodos</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/node.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Gremios</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/guild.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Talleres</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/workshop.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Fortalezas</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/fortress.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Barreras</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/barrier.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="page-header text-center">
+                    <a name="units"></a>
+                    <h1><i class="fa fa-fw fa-info-circle"></i> Unidades</h1>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="page-header text-center">
+                    <a name="spells"></a>
+                    <h1><i class="fa fa-fw fa-info-circle"></i> Hechizos</h1>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="page-header text-center">
+                    <a name="auctions"></a>
+                    <h1><i class="fa fa-fw fa-info-circle"></i> Subastas</h1>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="page-header text-center">
+                    <a name="battles"></a>
+                    <h1><i class="fa fa-fw fa-info-circle"></i> Batallas</h1>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
