--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-bar-chart"></i>Reino</h1>
+                    <h1><i class="fa fa-fw fa-bar-chart"></i> Resumen</h1>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
@@ -16,7 +16,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/treasure.jpg') }}">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
                             </div>
                             <div class="col-xs-9">
                                 <p>Texto descriptivo</p>
@@ -25,7 +25,7 @@
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
                         <a href="{{ path('archmage_game_kingdom_tax') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs"> Recaudar</span></a>
-                        <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-beer"></i><span class="hidden-xs"> Contratar</span></a>
+                        <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-secret"></i><span class="hidden-xs"> Mercado negro</span></a>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
                             </div>
                             <div class="col-xs-9">
                                 <p>Texto descriptivo</p>
@@ -44,7 +44,7 @@
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
                         <a href="{{ path('archmage_game_territory_explore') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-search"></i><span class="hidden-xs"> Explorar</span></a>
-                        <a href="{{ path('archmage_game_territory_build') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-home"></i><span class="hidden-xs"> Construir</span></a>
+                        <a href="{{ path('archmage_game_territory_build') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-wrench"></i><span class="hidden-xs"> Construir</span></a>
                         <a href="{{ path('archmage_game_territory_demolish') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-bomb"></i><span class="hidden-xs"> Derribar</span></a>
                     </div>
                 </div>
@@ -91,11 +91,11 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Artefactos</div>
+                    <div class="panel-heading text-center">Defensa</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/artifact.jpg') }}">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/defense.jpg') }}">
                             </div>
                             <div class="col-xs-9">
                                 <p>Texto descriptivo</p>
@@ -103,8 +103,8 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-secret"></i><span class="hidden-xs"> Adquirir</span></a>
-                        <a href="{{ path('archmage_game_magic_artifact') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-joomla"></i><span class="hidden-xs"> Usar</span></a>
+                        <a href="{{ path('archmage_game_magic_artifact') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-joomla"></i><span class="hidden-xs"> Artefactos</span></a>
+                        <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs"> Hechizos</span></a>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/letter.jpg') }}">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/social.jpg') }}">
                             </div>
                             <div class="col-xs-9">
                                 <p>Texto descriptivo</p>
