--- a/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
@@ -4,7 +4,6 @@
 
 {% block body %}
     <div class="container">
-        <br>
         <div class="jumbotron text-center">
             <h1>Arch<i class="fa fa-fw fa-eye"></i>Mage</h1>
             <form class="form-signin" data-toggle="validator">
@@ -16,38 +15,38 @@
             <br><br>
             <div class="row">
                 <div class="col-xs-offset-1 col-xs-2">
-                    <a href="{{ path('archmage_game_home_help') }}#doom" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/doom.jpg') }}"/></a>
+                    <a href="{{ path('archmage_game_home_help') }}#factions" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/doom.jpg') }}"/></a>
                     <div class="caption hidden-xs hidden-sm text-danger">
                         <h3>Destrucción</h3>
                         <small>Fuego y sangre</small>
                     </div>
                 </div>
                 <div class="col-xs-2">
-                    <a href="{{ path('archmage_game_home_help') }}#darkness" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/darkness.jpg') }}"/></a>
+                    <a href="{{ path('archmage_game_home_help') }}#factions" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/darkness.jpg') }}"/></a>
                     <div class="caption hidden-xs hidden-sm text-warning">
                         <h3>Oscuridad</h3>
-                        <small>No muerte</small>
+                        <small>Carne y hueso</small>
                     </div>
                 </div>
                 <div class="col-xs-2">
-                    <a href="{{ path('archmage_game_home_help') }}#nature" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/nature.jpg') }}"/></a>
+                    <a href="{{ path('archmage_game_home_help') }}#factions" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/nature.jpg') }}"/></a>
                     <div class="caption hidden-xs hidden-sm text-success">
                         <h3>Naturaleza</h3>
-                        <small>Quid pro quo</small>
+                        <small>Tierra y agua</small>
                     </div>
                 </div>
                 <div class="col-xs-2">
-                    <a href="{{ path('archmage_game_home_help') }}#ghost" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/ghost.jpg') }}"/></a>
+                    <a href="{{ path('archmage_game_home_help') }}#factions" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/ghost.jpg') }}"/></a>
                     <div class="caption hidden-xs hidden-sm text-info">
                         <h3>Fantasmal</h3>
                         <small>Mente y espíritu</small>
                     </div>
                 </div>
                 <div class="col-xs-2">
-                    <a href="{{ path('archmage_game_home_help') }}#sacred" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/holy.jpg') }}"/></a>
+                    <a href="{{ path('archmage_game_home_help') }}#factions" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/holy.jpg') }}"/></a>
                     <div class="caption hidden-xs hidden-sm text-primary">
                         <h3>Sagrado</h3>
-                        <small>Luz y pureza</small>
+                        <small>Luz y gloria</small>
                     </div>
                 </div>
             </div>
