--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -7,12 +7,12 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-user-secret"></i>Mercado negro</h1>
+                    <h1><i class="fa fa-fw fa-user-secret"></i> Mercado negro</h1>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Libro del Gólem <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-joomla"></i> Libro del Gólem <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -40,14 +40,14 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Cabeza de Medusa <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-joomla"></i> Cabeza de Medusa <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/artifact/medusahead.jpg') }}">
                             </div>
                             <div class="col-xs-9">
-                                                                <p>Texto descriptivo</p>
+                                <p>Texto descriptivo</p>
                             </div>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-info">
-                    <div class="panel-heading text-center">Señor de los Elementales <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i> Señor de los Elementales <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -96,7 +96,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-danger">
-                    <div class="panel-heading text-center">Armageddon <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-magic"></i> Armageddon <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -124,14 +124,14 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Brújula Mágica <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-joomla"></i> Brújula Mágica <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/artifact/magiccompass.jpg') }}">
                             </div>
                             <div class="col-xs-9">
-                                                                <p>Texto descriptivo</p>
+                                <p>Texto descriptivo</p>
                             </div>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-success">
-                    <div class="panel-heading text-center">Chamán Élfico <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i> Chamán Élfico <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -180,7 +180,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-primary">
-                    <div class="panel-heading text-center">23 Dragones Blancos <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flag"></i> 23 Dragones Blancos <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
