--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -7,12 +7,12 @@
         <div class="row">
             <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-joomla"></i>Usar artefactos</h1>
+                    <h1><i class="fa fa-fw fa-joomla"></i> Activar artefactos</h1>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Libro del Gólem</div>
+                    <div class="panel-heading text-center">Libro del Gólem (3)</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -28,6 +28,7 @@
                             <div class="form-group">
                                 <div class="input-group">
                                     <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-joomla"></i> Activar</button>
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-shield"></i> Defensa</button>
                                 </div>
                             </div>
                         </form>
