--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-magic"></i>Conjurar</h1>
+                    <h1><i class="fa fa-fw fa-magic"></i> Conjurar</h1>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
@@ -28,6 +28,7 @@
                             <div class="form-group">
                                 <div class="input-group">
                                     <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-tint"></i> Conjurar</button>
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-shield"></i> Defensa</button>
                                 </div>
                             </div>
                         </form>
